백엔드 CORS 설정 및 프론트엔드 API 설정 업데이트