@@ -18,15 +18,25 @@ public class CorsConfig implements WebMvcConfigurer {
 
     @Value("${spring.profiles.active:local}")
     private String activeProfile;
+    
+    @Value("${CORS_ALLOWED_ORIGINS:https://www.dnfpartyhelper.xyz}")
+    private String corsAllowedOrigins;
+    
+    @Value("${CORS_ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}")
+    private String corsAllowedMethods;
+    
+    @Value("${CORS_ALLOWED_HEADERS:*}")
+    private String corsAllowedHeaders;
 
     @Override
     public void addCorsMappings(CorsRegistry registry) {
         if ("production".equals(activeProfile)) {
-            // 운영 환경: 특정 도메인만 허용
+            // 운영 환경: 환경 변수에서 허용된 도메인만 허용
+            String[] origins = corsAllowedOrigins.split(",");
             registry.addMapping("/**")
-                    .allowedOrigins("https://www.dnfpartyhelper.xyz")
-                    .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
-                    .allowedHeaders("*")
+                    .allowedOrigins(origins)
+                    .allowedMethods(corsAllowedMethods.split(","))
+                    .allowedHeaders(corsAllowedHeaders.split(","))
                     .allowCredentials(false)
                     .maxAge(3600);
         } else {
@@ -45,15 +55,16 @@ public class CorsConfig implements WebMvcConfigurer {
         CorsConfiguration configuration = new CorsConfiguration();
         
         if ("production".equals(activeProfile)) {
-            // 운영 환경: 특정 도메인만 허용
-            configuration.setAllowedOrigins(List.of("https://www.dnfpartyhelper.xyz"));
+            // 운영 환경: 환경 변수에서 허용된 도메인만 허용
+            String[] origins = corsAllowedOrigins.split(",");
+            configuration.setAllowedOrigins(Arrays.asList(origins));
         } else {
             // 개발/로컬 환경: 모든 도메인 허용
             configuration.setAllowedOriginPatterns(Arrays.asList("*"));
         }
         
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList(corsAllowedMethods.split(",")));
+        configuration.setAllowedHeaders(Arrays.asList(corsAllowedHeaders.split(",")));
         configuration.setAllowCredentials(false);
         configuration.setMaxAge(3600L);
         
